--- a/packages/sewing-kit-koa/package.json
+++ b/packages/sewing-kit-koa/package.json
@@ -33,13 +33,15 @@
     "koa-compose": ">=3.0.0 <4.0.0",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
+    "node-gzip": "^1.1.2",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^2.1.10",
     "@shopify/with-env": "^1.1.4",
     "@types/app-root-path": "^1.2.4",
-    "@types/fs-extra": "^5.0.4"
+    "@types/fs-extra": "^5.0.4",
+    "@types/node-gzip": "^1.1.0"
   },
   "files": [
     "dist/*"
