Use deep repo links
Rather than link to the top-level mono-repo, we deep link.

Based on seeing how @babel/plugin-transform-flow-comments does it:

  {
    "name": "@babel/plugin-transform-flow-comments",
    [...]
    "repository": "https://github.com/babel/babel/tree/master/packages/babel-plugin-transform-flow-comments",

--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -13,10 +13,7 @@
     "@shopify:registry": "https://registry.npmjs.org"
   },
   "author": "Shopify Inc.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shopify/quilt.git"
-  },
+  "repository": "https://github.com/shopify/quilt/tree/master/packages/jest-mock-apollo",
   "bugs": {
     "url": "https://github.com/shopify/quilt/issues"
   },
