--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -14,10 +14,7 @@
     "@shopify:registry": "https://registry.npmjs.org"
   },
   "author": "Shopify Inc.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shopify/quilt.git"
-  },
+  "repository": "https://github.com/shopify/quilt/tree/master/packages/network",
   "bugs": {
     "url": "https://github.com/shopify/quilt/issues"
   },
