--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -14,10 +14,7 @@
     "build": "tsc --p tsconfig.json"
   },
   "author": "Shopify Inc.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shopify/quilt.git"
-  },
+  "repository": "https://github.com/shopify/quilt/tree/master/packages/polyfills",
   "bugs": {
     "url": "https://github.com/shopify/quilt/issues"
   },
