--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -12,10 +12,7 @@
     "@shopify:registry": "https://registry.npmjs.org"
   },
   "author": "Shopify Inc.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shopify/quilt.git"
-  },
+  "repository": "https://github.com/shopify/quilt/tree/master/packages/graphql-persisted",
   "bugs": {
     "url": "https://github.com/shopify/quilt/issues"
   },
