--- a/packages/react-google-analytics/package.json
+++ b/packages/react-google-analytics/package.json
@@ -27,5 +27,9 @@
   },
   "devDependencies": {
     "@shopify/enzyme-utilities": "^2.1.7"
-  }
+  },
+  "files": [
+    "dist/*",
+    "!tsconfig.tsbuildinfo"
+  ]
 }
