--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/rpc/README.md",
   "files": [
-    "dist/*"
+    "dist/*",
+    "!tsconfig.tsbuildinfo"
   ],
   "devDependencies": {
     "@types/uuid": "^3.4.6",
