--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -28,7 +28,8 @@
     "@types/unist": "^2.0.3"
   },
   "files": [
-    "dist/*"
+    "dist/*",
+    "!tsconfig.tsbuildinfo"
   ],
   "dependencies": {
     "@babel/template": "^7.6.0",
