--- a/packages/jest-mock-router/package.json
+++ b/packages/jest-mock-router/package.json
@@ -33,5 +33,9 @@
   "sideEffects": false,
   "dependencies": {
     "tslib": "^1.9.3"
-  }
+  },
+  "files": [
+    "dist/*",
+    "!tsconfig.tsbuildinfo"
+  ]
 }
