--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -24,5 +24,9 @@
     "pretty-ms": "^3.2.0",
     "tslib": "^1.9.3"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "files": [
+    "dist/*",
+    "!tsconfig.tsbuildinfo"
+  ]
 }
