--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -31,5 +31,9 @@
     "@shopify/useful-types": "^1.3.0",
     "faker": "^4.1.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "files": [
+    "dist/*",
+    "!tsconfig.tsbuildinfo"
+  ]
 }
