--- a/packages/react-shortcuts/package.json
+++ b/packages/react-shortcuts/package.json
@@ -24,5 +24,9 @@
   "dependencies": {
     "tslib": "^1.9.3"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "files": [
+    "dist/*",
+    "!tsconfig.tsbuildinfo"
+  ]
 }
