--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.18",
     "@types/puppeteer": "^1.20.0",
-    "@types/react": "16.8.10",
-    "@types/react-dom": "^16.8.3",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.6",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
@@ -69,9 +69,9 @@
     "plop": "^2.0.0",
     "prettier": "~1.17.1",
     "puppeteer": "^1.20.0",
-    "react": "16.9.0-alpha.0",
+    "react": "16.12.0",
     "react-apollo": "^3.1.2",
-    "react-dom": "16.9.0-alpha.0",
+    "react-dom": "16.12.0",
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.4",
@@ -80,7 +80,7 @@
   },
   "dependencies": {},
   "resolutions": {
-    "@types/react": "16.8.10",
-    "@types/react-dom": "16.8.3"
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5"
   }
 }
