Export formatDate function

--- a/packages/dates/tsconfig.json
+++ b/packages/dates/tsconfig.json
@@ -11,5 +11,9 @@
     "./src/**/*.tsx"
   ],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{"path": "../address"}, {"path": "../function-enhancers"}, {"path": "../decorators"}]
+  "references": [
+    {"path": "../address"},
+    {"path": "../function-enhancers"},
+    {"path": "../decorators"}
+  ]
 }
