--- a/config/typescript/tsconfig.base.json
+++ b/config/typescript/tsconfig.base.json
@@ -10,6 +10,7 @@
     "downlevelIteration": true,
     "esModuleInterop": true,
     "jsx": "react",
+    "isolatedModules": true,
     "strictNullChecks": true,
     "noImplicitAny": false,
     "sourceMap": false,
