--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -27,16 +27,16 @@
     "@shopify/react-graphql": "^6.1.15",
     "@shopify/react-hooks": "^1.11.0",
     "@shopify/react-html": "^9.3.14",
-    "apollo-client": "^2.3.8",
-    "apollo-link-context": "^1.0.19"
+    "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
+    "apollo-client": ">=2.0.0 <3.0.0",
+    "apollo-link": ">=1.0.0 <2.0.0",
+    "apollo-link-context": ">=1.0.0 <2.0.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
-    "@shopify/react-effect": "^3.2.12",
-    "apollo-cache-inmemory": "^1.3.6",
-    "apollo-link": "^1.2.3"
+    "@shopify/react-effect": "^3.2.12"
   },
   "files": [
     "dist/*",
