--- a/gems/quilt_rails/Gemfile
+++ b/gems/quilt_rails/Gemfile
@@ -3,6 +3,8 @@ source('https://rubygems.org')
 
 gemspec
 
+gem('rubocop-shopify', require: false)
+
 group :test do
   gem 'minitest'
   gem 'minitest-hooks'
