--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,8 @@
 {
-  "lerna": "2.9.0",
+  "lerna": "3.22.1",
   "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent",
-  "commands": {
-    "publish": {
-      "skipNpm": true,
-      "ignore": ["**/*.md", "**/tests/**", "**/test/**"]
-    }
-  }
+  "ignoreChanges": ["**/*.md", "**/tests/**", "**/test/**"]
 }
