--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A loosely related set of packages for JavaScript/TypeScript projects at Shopify",
   "scripts": {
+    "publish": "lerna publish",
     "build": "yarn tsc --build packages",
     "lint": "eslint '**/*.{ts,tsx}'",
     "lint:changelogs": "node scripts/lint-changelogs.js",
@@ -11,9 +12,9 @@
     "pretest": "yarn build",
     "test": "yarn _test --no-coverage",
     "test:ci": "yarn _test --maxWorkers=3 --coverage",
-    "prerelease": "yarn lint:changelogs",
-    "release": "lerna version",
-    "release-beta": "lerna version --dist-tag beta",
+    "check": "lerna run check",
+    "release": "yarn lint:changelogs && lerna publish",
+    "release-beta": "lerna publish --dist-tag beta",
     "clean": "rimraf './packages/*/dist'",
     "generate": "plop",
     "generate:package": "plop package && yarn plop docs && prettier --write \"./packages/tsconfig.json\"",
@@ -69,7 +70,7 @@
     "jest": "^25.3.0",
     "jest-enzyme": "^7.1.2",
     "jest-transform-graphql": "^2.1.0",
-    "lerna": "^3.22.1",
+    "lerna": "^2.9.0",
     "plop": "^2.6.0",
     "prettier": "~2.0.4",
     "puppeteer": "^1.20.0",
@@ -84,7 +85,6 @@
   "dependencies": {},
   "resolutions": {
     "@types/react": "16.9.19",
-    "@types/react-dom": "16.9.5",
-    "dot-prop": "5.1.1"
+    "@types/react-dom": "16.9.5"
   }
 }
