--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "babel": {
+    "presets": ["@shopify/babel-preset/web"]
+  },
   "devDependencies": {
     "@apollo/react-common": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
