--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
   "devDependencies": {
     "@apollo/react-common": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
-    "@babel/core": "7.11.6",
+    "@babel/core": "^7.11.6",
     "@shopify/app-bridge": "^0.7.3",
-    "@shopify/babel-preset": "23.1.1",
+    "@shopify/babel-preset": "^23.1.1",
     "@shopify/eslint-plugin": "^36.0.2",
     "@shopify/tophat": "^0.0.3",
     "@types/enzyme": "^3.10.5",
