--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/polyfills",
-  "version": "1.2.4",
+  "version": "2.0.0-core-js-beta.3",
   "license": "MIT",
   "description": "Blessed polyfills for web platform features",
   "sideEffects": true,
