--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@apollo/react-common": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-decorators": "7.10.5",
     "@sewing-kit/cli": "^0.2.0",
     "@sewing-kit/config": "^0.1.7",
     "@sewing-kit/plugin-eslint": "^0.1.6",
