--- a/.github/workflows/ruby-ci.yml
+++ b/.github/workflows/ruby-ci.yml
@@ -2,39 +2,36 @@ name: Ruby-CI
 
 on:
   push:
-    branches: [master]
+  # branches: [master]
   pull_request:
-    branches: [master]
+    # branches: [master]
 
 jobs:
   ruby-tests:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        ruby-version: [2.6, 2.7]
+
     steps:
       - uses: actions/checkout@v2
         name: Checkout
 
-      - uses: actions/setup-ruby@v1
-        name: Use Ruby 2.x
+      - uses: ruby/setup-ruby@v1
+        name: Use Ruby ${{ matrix.ruby-version }}
         with:
-          ruby-version: 2.x
-
-      - uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-
-      - name: Setup
-        run: gem install bundler -v 2.0.2
-
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true
       - name: 📦 Install dependencies
-        run: bundle install --clean
+        run: |
+          bundle config set ignore_messages true
+          bundle config set clean true
+          bundle install
         working-directory: ./gems/quilt_rails
-
       - name: 💅🏼 Lint
         run: bundle exec rubocop --fail-fast
-
+        working-directory: ./gems/quilt_rails
       - name: Test
         run: bundle exec rake test
+        working-directory: ./gems/quilt_rails
