--- a/.github/workflows/ruby-ci.yml
+++ b/.github/workflows/ruby-ci.yml
@@ -2,9 +2,9 @@ name: Ruby-CI
 
 on:
   push:
-  # branches: [master]
+  branches: [master]
   pull_request:
-    # branches: [master]
+    branches: [master]
 
 jobs:
   ruby-tests:
