--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@apollo/react-common": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-decorators": "7.10.5",
     "@sewing-kit/cli": "^0.2.0",
     "@sewing-kit/config": "^0.1.7",
     "@sewing-kit/plugin-eslint": "^0.1.6",
@@ -92,7 +91,6 @@
   },
   "resolutions": {
     "@types/react": "16.9.19",
-    "@types/react-dom": "16.9.5",
-    "@babel/plugin-proposal-decorators": "7.10.5"
+    "@types/react-dom": "16.9.5"
   }
 }
