--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -31,6 +31,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - uses: actions/cache@v2
+        id: sewing-kit-cache
+        name: Restore sewing-kit cache
+        with:
+          path: |
+            .sewing-kit/
+          key: ${{ runner.os }}-sewing-kit-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-sewing-kit-
+
       - name: 📦 Install dependencies
         run: yarn --production=false --frozen-lockfile
 
@@ -67,6 +77,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - uses: actions/cache@v2
+        id: build-cache
+        name: Restore build cache
+        with:
+          path: |
+            .sewing-kit/
+            ./packages/*/build/
+          key: ${{ runner.os }}-build-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-build-
+
       - name: 📦 Install dependencies
         run: yarn --production=false --frozen-lockfile
 
@@ -101,6 +122,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - uses: actions/cache@v2
+        id: build-cache
+        name: Restore build cache
+        with:
+          # index packages files need to be cached for e2e tests
+          path: |
+            .sewing-kit/
+            ./packages/*/build/
+            ./packages/*/*.esnext
+            ./packages/*/*.mjs
+            ./packages/*/*.js
+          key: ${{ runner.os }}-build-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-build-
+
       - name: 📦 Install dependencies
         run: yarn --production=false --frozen-lockfile
 
@@ -108,7 +144,7 @@ jobs:
         run: yarn build
 
       - name: E2E tests
-        run: yarn test:ci "(address|react-server)"
+        run: yarn test --debug "(address|react-server)"
 
   node-unit-tests:
     runs-on: ubuntu-latest
@@ -138,6 +174,17 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+
+      - uses: actions/cache@v2
+        id: build-cache
+        name: Restore build cache
+        with:
+          path: |
+            .sewing-kit/
+            ./packages/*/build/
+          key: ${{ runner.os }}-build-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-build-
 
       - name: 📦 Install dependencies
         run: yarn --production=false --frozen-lockfile
