--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-mini-transforms",
-  "version": "1.3.0",
+  "version": "1.3.0-beta-3",
   "license": "MIT",
   "description": "Transformers for importing .graphql files in various build tools.",
   "main": "index.js",
@@ -29,7 +29,7 @@
     "@types/webpack": "^4.41.11",
     "fs-extra": "^9.0.0",
     "graphql": ">=14.5.0 <15.0.0",
-    "graphql-typed": "^0.6.1",
+    "graphql-typed": "^0.6.1-beta-3",
     "loader-utils": "^2.0.0",
     "tslib": "^1.14.1"
   },
