--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-validate-fixtures",
-  "version": "0.13.0",
+  "version": "0.13.0-beta-3",
   "license": "MIT",
   "description": "Validates JSON fixtures for GraphQL responses against the associated operations and schema",
   "main": "index.js",
@@ -30,10 +30,10 @@
     "glob": "^7.1.2",
     "graphql": ">=14.5.0 <15.0.0",
     "graphql-config": "^2.2.1",
-    "graphql-config-utilities": "^1.2.0",
-    "graphql-tool-utilities": "^1.3.0",
-    "yargs": "^15.3.1",
-    "tslib": "^1.14.1"
+    "graphql-config-utilities": "^1.2.0-beta-3",
+    "graphql-tool-utilities": "^1.3.0-beta-3",
+    "tslib": "^1.14.1",
+    "yargs": "^15.3.1"
   },
   "files": [
     "build/*",
