--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-typescript-definitions",
-  "version": "0.22.0",
+  "version": "0.23.0",
   "license": "MIT",
   "description": "Generate TypeScript definition files from .graphql documents",
   "main": "index.js",
@@ -37,11 +37,11 @@
     "glob": "^7.1.2",
     "graphql": ">=14.5.0 <15.0.0",
     "graphql-config": "^2.2.1",
-    "graphql-config-utilities": "^1.2.0",
-    "graphql-tool-utilities": "^1.3.0",
+    "graphql-config-utilities": "^1.3.0",
+    "graphql-tool-utilities": "^1.4.0",
+    "tslib": "^1.14.1",
     "upper-case-first": "^2.0.1",
-    "yargs": "^15.3.1",
-    "tslib": "^1.14.1"
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@types/common-tags": "^1.4.0",
