--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x]
+    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v2
