Fix bin file generation (#1798)
graphql-typescript-definitions and graphql-validate-fixture have
binarys. Instead of manually writing the bin file content, we can
get sewing-kit to generate these bin folders for us

- Deletes packages/*/bin (only affects graphql-typescript-definitions
  and graphql-validate-fixtures
- Add packages/*/bin to gitignore as this folder will be generated by SK
- Add pkg.binary() definitions for packages that have binarys

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ tmp
 # Sewing-Kit builds and entrypoints
 .sewing-kit
 packages/*/build
+packages/*/bin
 packages/*/*.esnext
 packages/*/*.mjs
 packages/*/*.d.ts
