--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
     "**/.git": true,
     "**/node_modules": true,
     "**/.DS_Store": true,
-    "packages/*/{.sewing-kit,build}": true,
+    "packages/*/{.sewing-kit,build,bin}": true,
     ".{dev,shadowenv.d,sewing-kit}": true
   },
   "files.insertFinalNewline": true,
