--- a/packages/ast-utilities/package.json
+++ b/packages/ast-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/ast-utilities",
-  "version": "0.2.3",
+  "version": "0.2.3-import-latest-external-quilt-plugin-beta.1",
   "license": "MIT",
   "description": "Utilities for working with Abstract Syntax Trees (ASTs)",
   "main": "index.js",
